feat(gap-analysis): Busca dinâmica por ano, filtro de mês e correção de layout